--- a/newUserPage.html
+++ b/newUserPage.html
@@ -16,7 +16,7 @@
       <nav >
         <ul>
             <li><a href="index.html" id="homePage">Home</a></li>
-            <li><a href="newUserPage.html" id="newContactPage">New Contact</a></li>
+            <li><a href="newContact.php" id="newContactPage">New Contact</a></li>
             <li><a href="viewUserPage.php" id="viewPage">ViewUsers</a></li>
             <li><a href="Logout.php" id="logOutPage">Logout</a></li>
         </ul>
